# rayzzz

./: .gitignore  .gitmodules  CMakeLists.txt  aabb.h  bvh.h  camera.h  color.h  hittable.h  hittablelist.h  main.cpp  material.h  moving_sphere.cpp  moving_sphere.h  ray.h  rtweekend.h  sphere.h  texture.h  triangle.h  vec3.h
include/: aabb.h  bvh.h  hittable.h  hittablelist.h  material.h  modelloader.h  texture.h  triangle.h  vec3.h
modelloader/: modelloader.cpp  modelloader.h
